Add 'Next 7 days' mode to timeline view

BUG: 263849