mobile/calendar/korganizer-mobile.qml
@@ -178,7 +178,7 @@ KPIM.MainView {
   Loader {
     anchors.fill: parent
     source: guiStateManager.inViewTimelineState ? "TimelineView.qml" : ""
-    onLoaded: { item.showRange( dateEdit.date, 1 /* "Week" */ ); }
+    onLoaded: { item.showRange( dateEdit.date, 4 /* Next 7 days */ ); }
   }
 
   Loader {
